--- a/controler/settingswindow.ui
+++ b/controler/settingswindow.ui
@@ -34,13 +34,13 @@
     <rect>
      <x>9</x>
      <y>9</y>
-     <width>231</width>
+     <width>251</width>
      <height>281</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="3" column="1">
-     <widget class="QSpinBox" name="leds"/>
+     <widget class="QSpinBox" name="ledsperstripe"/>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_broker">
@@ -66,7 +66,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QComboBox" name="scheme">
       <item>
        <property name="text">
@@ -75,7 +75,7 @@
       </item>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0">
      <widget class="QLabel" name="label_scheme">
       <property name="text">
        <string>Coloring Scheme</string>
@@ -83,7 +83,7 @@
      </widget>
     </item>
     <item row="3" column="0">
-     <widget class="QLabel" name="label_leds">
+     <widget class="QLabel" name="label_ledsperstripe">
       <property name="text">
        <string>LEDs/Stripe</string>
       </property>
@@ -95,17 +95,29 @@
     <item row="0" column="1">
      <widget class="QLineEdit" name="broker"/>
     </item>
+    <item row="4" column="1">
+     <widget class="QSpinBox" name="ledsperdisplay"/>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_ledsperdisplay">
+      <property name="text">
+       <string>LEDs/DisplayWidth</string>
+      </property>
+     </widget>
+    </item>
    </layout>
    <zorder>label_stripes</zorder>
    <zorder>label_scheme</zorder>
-   <zorder>label_leds</zorder>
+   <zorder>label_ledsperstripe</zorder>
    <zorder>label_broker</zorder>
    <zorder>label_topic</zorder>
    <zorder>scheme</zorder>
-   <zorder>leds</zorder>
+   <zorder>ledsperstripe</zorder>
    <zorder>stripes</zorder>
    <zorder>topic</zorder>
    <zorder>broker</zorder>
+   <zorder>ledsperdisplay</zorder>
+   <zorder>label_ledsperdisplay</zorder>
   </widget>
   <zorder>gridLayoutWidget</zorder>
   <zorder>buttonBox</zorder>
@@ -114,7 +126,7 @@
   <tabstop>broker</tabstop>
   <tabstop>topic</tabstop>
   <tabstop>stripes</tabstop>
-  <tabstop>leds</tabstop>
+  <tabstop>ledsperstripe</tabstop>
   <tabstop>scheme</tabstop>
  </tabstops>
  <resources/>
