--- a/controler/settingswindow.ui
+++ b/controler/settingswindow.ui
@@ -6,42 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>444</width>
+    <height>261</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>180</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>20</y>
-     <width>81</width>
-     <height>241</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>251</width>
-     <height>281</height>
+     <x>10</x>
+     <y>10</y>
+     <width>324</width>
+     <height>247</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="1">
-     <widget class="QSpinBox" name="ledsperstripe"/>
-    </item>
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0" columnstretch="0,0">
     <item row="0" column="0">
      <widget class="QLabel" name="label_broker">
       <property name="text">
@@ -49,22 +42,11 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="topic"/>
+    <item row="3" column="1">
+     <widget class="QSpinBox" name="ledsperstripe"/>
     </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_stripes">
-      <property name="text">
-       <string>Stripes</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_topic">
-      <property name="text">
-       <string>Main Topic</string>
-      </property>
-     </widget>
+    <item row="4" column="1">
+     <widget class="QSpinBox" name="ledsperdisplay"/>
     </item>
     <item row="5" column="1">
      <widget class="QComboBox" name="scheme">
@@ -82,6 +64,29 @@
       </property>
      </widget>
     </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="broker">
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>0</height>
+       </size>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QSpinBox" name="stripes"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_topic">
+      <property name="text">
+       <string>Main Topic</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="topic"/>
+    </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_ledsperstripe">
       <property name="text">
@@ -89,19 +94,17 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QSpinBox" name="stripes"/>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="broker"/>
-    </item>
-    <item row="4" column="1">
-     <widget class="QSpinBox" name="ledsperdisplay"/>
-    </item>
     <item row="4" column="0">
      <widget class="QLabel" name="label_ledsperdisplay">
       <property name="text">
        <string>LEDs/DisplayWidth</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_stripes">
+      <property name="text">
+       <string>Stripes</string>
       </property>
      </widget>
     </item>
@@ -119,8 +122,34 @@
    <zorder>ledsperdisplay</zorder>
    <zorder>label_ledsperdisplay</zorder>
   </widget>
-  <zorder>gridLayoutWidget</zorder>
-  <zorder>buttonBox</zorder>
+  <widget class="QDialogButtonBox" name="buttonBox">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>10</y>
+     <width>80</width>
+     <height>56</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+     <horstretch>2</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="baseSize">
+    <size>
+     <width>0</width>
+     <height>2</height>
+    </size>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+   <property name="standardButtons">
+    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>broker</tabstop>
